# GraphicsProgrammingReference

./: .gitignore  README.md
examples/: 01_boilerplate.cpp  02_abstracted_boilerplate.cpp  03_triangle.cpp  04_quad.cpp  05_color_attrib.cpp  06_texture.cpp  07_transformation.cpp  08_input.cpp  09_cube.cpp  10_camera.cpp  11_mesh.cpp  12_node.cpp  13_instance.cpp  14_texture_array.cpp  CMakeLists.txt  boilerplate.cpp  boilerplate_example.cpp
examples/include/: CMakeLists.txt
examples/shaders/: 04_quad.frag  05_color_attrib.frag  06_texture.frag  06_texture.vert  07_transformation.vert  08_cube.vert  11_mesh.frag  11_mesh.vert  12_node.frag  12_node.vert  13_instance.frag  13_instance.vert  14_texture_array.frag
examples/src/: camera.cpp  camera.h  ebo.cpp  ebo.h  engine.h  image.cpp  image.h  includes.h  instancer.cpp  instancer.h  keyboard.cpp  keyboard.h  mat.cpp  mat.h  mesh.cpp  mesh.h  mouse.cpp  mouse.h  node.cpp  node.h  shader.cpp  shader.h  texture.cpp  texture.h  textureArray.cpp  textureArray.h  vao.cpp  vao.h  vbo.cpp  vbo.h  window.cpp  window.h
opengl_reference/: camera.md  ebo.md  engine_design.md  input.md  instance.md  shader.md  texture.md  transformation.md  vao.md  vbo.md  window.md
rendering_methods/: batch_rendering.md  individual_draw_rendering.md
